[project]
name = "btreeny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Lingard", email = "tklingard@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.24.2",
    "rerun-sdk>=0.24.0",
    "ruff>=0.12.4",
    "typer>=0.16.0",
]
